# cis194

W10/: AParser.hs
W11/: AParser.hs  SExpr.hs
W12/: Risk.hs
W4/: cis194w4.hi
W5/: W5.cabal  codex.tags  stack.yaml
W5/.stack-work/install/x86_64-linux/ghc-8.0.1/8.0.1/flag-cache/: W5-0.1.0.0-C1YhGcVwRjoCzSJResfj0m
W5/.stack-work/install/x86_64-linux/ghc-8.0.1/8.0.1/lib/x86_64-linux-ghc-8.0.1/W5-0.1.0.0-C1YhGcVwRjoCzSJResfj0m/: ExprT.dyn_hi
W5/.stack-work/install/x86_64-linux/ghc-8.0.1/8.0.1/pkgdb/: W5-0.1.0.0-C1YhGcVwRjoCzSJResfj0m.conf  package.cache
W5/.stack-work/install/x86_64-linux/lts-7.19/8.0.1/flag-cache/: W5-0.1.0.0-C1YhGcVwRjoCzSJResfj0m
W5/.stack-work/install/x86_64-linux/lts-7.19/8.0.1/lib/x86_64-linux-ghc-8.0.1/W5-0.1.0.0-C1YhGcVwRjoCzSJResfj0m/: Parser.hi  StackVM.dyn_hi  StackVM.hi
W5/.stack-work/install/x86_64-linux/lts-8.0/8.0.2/pkgdb/: W5-0.1.0.0-XZdPgBj8ab8AI4eBIwYf2.conf  package.cache
W5/.stack-work/install/x86_64-linux/lts-8.3/8.0.2/flag-cache/: W5-0.1.0.0-XZdPgBj8ab8AI4eBIwYf2
W5/.stack-work/install/x86_64-linux/lts-8.3/8.0.2/lib/x86_64-linux-ghc-8.0.2/W5-0.1.0.0-XZdPgBj8ab8AI4eBIwYf2/: ExprT.dyn_hi  ExprT.hi
W5/.stack-work/install/x86_64-linux/lts-8.3/8.0.2/pkgdb/: W5-0.1.0.0-XZdPgBj8ab8AI4eBIwYf2.conf  package.cache
W5/app/: Main.hs
W6/: Fibbonacci.hs
W7/: Buffer.hi  JoinList.hi  JoinList.hs  Scrabble.hi  Sized.hi
W7/bak/: JoinList.hs  Scrabble.hs  Sized.hs
W8/: Party.hs
w4/: cis194w4.hs
